--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/jsonwebtoken": "^8.5.8",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "i": "^0.3.7",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "npm": "^8.16.0",
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.4",
     "nodemon": "^2.0.19",
