--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv": "^6.2.0",
     "express": "^4.18.1",
     "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
